--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,8 @@
 body{
-    background-color: #f0f0f0;
-}
-
-main {
     font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    background-color: #f0f0f0;
+    background-attachment: fixed;
+    user-select: none;
 }
 
 h2{
@@ -64,11 +57,12 @@ h2{
 }
 
 .timeline {
-    position: relative;
-    width: 70vw;
+    position: absolute;
     height: 2px;
-    margin-inline: 10vw;
+    left: 10vw;
+    top: 50%;
     background-color: #3498db;
+    margin-right: calc(20px + 5vw);
 }
 
 .marker {
@@ -79,6 +73,14 @@ h2{
     background-color: #3498db;
     border-radius: 50%;
     transform: translateX(-50%) translateY(-50%);
+    margin: 0;
+    margin-right: 100px;
+}
+
+.space{
+    position: absolute;
+    width: 20px;
+    height: 20px;
 }
 
 .event {
